# nrf51-sdk

./: NOTICE  README.md  meson.build  meson_options.txt  nrf51-sdk  pca10028.cross  sdk_config.h
