project('nrf51-sdk', 'C')

nrf51sdk = '/opt/nrf51-sdk'
nrf51sdk_components = nrf51sdk + '/components'
nrf51sdk_lib = nrf51sdk_components + '/libraries'
nrf51sdk_nrf = nrf51sdk_components + '/drivers_nrf'
nrf51sdk_ble = nrf51sdk_components + '/ble'
nrf51sdk_ble_sv = nrf51sdk_ble + '/ble_services'
nrf51sdk_softdevice = nrf51sdk_components + '/softdevice'
nrf51sdk_toolchain = nrf51sdk_components + '/toolchain'

bsp = files(
	nrf51sdk_lib + '/log/src/nrf_log_backend_serial.c',
	nrf51sdk_lib + '/log/src/nrf_log_frontend.c',
	nrf51sdk_lib + '/button/app_button.c',
	nrf51sdk_lib + '/util/app_error.c',
	nrf51sdk_lib + '/util/app_error_weak.c',
	nrf51sdk_lib + '/timer/app_timer.c',
	nrf51sdk_lib + '/crc16/crc16.c',
	nrf51sdk_lib + '/fds/fds.c',
	nrf51sdk_lib + '/fstorage/fstorage.c',
	nrf51sdk_lib + '/hardfault/hardfault_implementation.c',
	nrf51sdk_lib + '/fifo/app_fifo.c',
	nrf51sdk_lib + '/uart/app_uart_fifo.c',
	nrf51sdk_lib + '/util/app_util_platform.c',
	nrf51sdk_lib + '/util/nrf_assert.c',
	nrf51sdk_lib + '/uart/retarget.c',
	nrf51sdk_lib + '/util/sdk_errors.c',
	nrf51sdk_lib + '/util/sdk_mapped_flags.c',
	nrf51sdk_components + '/boards/boards.c',
	nrf51sdk_nrf + '/clock/nrf_drv_clock.c',
	nrf51sdk_nrf + '/common/nrf_drv_common.c',
	nrf51sdk_nrf + '/gpiote/nrf_drv_gpiote.c',
	nrf51sdk_nrf + '/uart/nrf_drv_uart.c',
	nrf51sdk_lib + '/bsp/bsp.c',
	nrf51sdk_lib + '/bsp/bsp_btn_ble.c',
	nrf51sdk_lib + '/bsp/bsp_nfc.c',
	nrf51sdk_ble + '/common/ble_advdata.c',
	nrf51sdk_ble + '/ble_advertising/ble_advertising.c',
	nrf51sdk_ble + '/common/ble_conn_params.c',
	nrf51sdk_ble + '/common/ble_conn_state.c',
	nrf51sdk_ble + '/ble_db_discovery/ble_db_discovery.c',
	nrf51sdk_ble + '/common/ble_srv_common.c',
	nrf51sdk_ble + '/peer_manager/gatt_cache_manager.c',
	nrf51sdk_ble + '/peer_manager/gatts_cache_manager.c',
	nrf51sdk_ble + '/peer_manager/id_manager.c',
	nrf51sdk_ble + '/peer_manager/peer_data.c',
	nrf51sdk_ble + '/peer_manager/peer_data_storage.c',
	nrf51sdk_ble + '/peer_manager/peer_database.c',
	nrf51sdk_ble + '/peer_manager/peer_id.c',
	nrf51sdk_ble + '/peer_manager/peer_manager.c',
	nrf51sdk_ble + '/peer_manager/pm_buffer.c',
	nrf51sdk_ble + '/peer_manager/pm_mutex.c',
	nrf51sdk_ble + '/peer_manager/security_dispatcher.c',
	nrf51sdk_ble + '/peer_manager/security_manager.c',
	nrf51sdk_ble_sv + '/ble_ans_c/ble_ans_c.c',
	nrf51sdk_softdevice + '/common/softdevice_handler/softdevice_handler.c',
)
bsp_inc = include_directories(
	nrf51sdk_nrf + '/comp',
	nrf51sdk_nrf + '/twi_master',
	nrf51sdk_ble_sv + '/ble_ancs_c',
	nrf51sdk_ble_sv + '/ble_ias_c',
	nrf51sdk_softdevice + '/s130/headers',
	nrf51sdk_lib + '/pwm',
	nrf51sdk_lib + '/usbd/class/cdc/acm',
	nrf51sdk_lib + '/usbd/class/hid/generic',
	nrf51sdk_lib + '/usbd/class/msc',
	nrf51sdk_lib + '/usbd/class/hid',
	nrf51sdk_lib + '/log',
	nrf51sdk_ble_sv + '/ble_gls',
	nrf51sdk_lib + '/fstorage',
	nrf51sdk_nrf + '/i2s',
	nrf51sdk_lib + '/gpiote',
	nrf51sdk_nrf + '/gpiote',
	nrf51sdk_components + '/boards',
	nrf51sdk_nrf + '/common',
	nrf51sdk_ble + '/ble_advertising',
	nrf51sdk_nrf + '/adc',
	nrf51sdk_softdevice + '/s130/headers/nrf51',
	nrf51sdk_ble_sv + '/ble_bas_c',
	nrf51sdk_ble_sv + '/ble_hrs_c',
	nrf51sdk_lib + '/queue',
	nrf51sdk_ble + '/ble_dtm',
	nrf51sdk_toolchain + '/cmsis/include',
	nrf51sdk_ble_sv + '/ble_rscs_c',
	nrf51sdk_nrf + '/uart',
	nrf51sdk_ble + '/common',
	nrf51sdk_ble_sv + '/ble_lls',
	nrf51sdk_nrf + '/wdt',
	nrf51sdk_lib + '/bsp',
	nrf51sdk_ble + '/ble_db_discovery',
	nrf51sdk_ble_sv + '/ble_bas',
	nrf51sdk_lib + '/experimental_section_vars',
	nrf51sdk_ble_sv + '/ble_ans_c',
	nrf51sdk_lib + '/slip',
	nrf51sdk_lib + '/mem_manager',
	nrf51sdk_lib + '/csense_drv',
	nrf51sdk_nrf + '/hal',
	nrf51sdk_ble_sv + '/ble_nus_c',
	nrf51sdk_nrf + '/rtc',
	nrf51sdk_ble_sv + '/ble_ias',
	nrf51sdk_lib + '/usbd/class/hid/mouse',
	nrf51sdk_nrf + '/ppi',
	nrf51sdk_ble_sv + '/ble_dfu',
	nrf51sdk_nrf + '/twis_slave',
	nrf51sdk_components + '/',
	nrf51sdk_lib + '/scheduler',
	nrf51sdk_ble_sv + '/ble_lbs',
	nrf51sdk_ble_sv + '/ble_hts',
	nrf51sdk_nrf + '/delay',
	nrf51sdk_lib + '/crc16',
	nrf51sdk_nrf + '/timer',
	nrf51sdk_lib + '/util',
	nrf51sdk_nrf + '/pwm',
	nrf51sdk_lib + '/usbd/class/cdc',
	nrf51sdk_lib + '/csense',
	nrf51sdk_nrf + '/rng',
	nrf51sdk_lib + '/low_power_pwm',
	nrf51sdk_lib + '/hardfault',
	nrf51sdk_ble_sv + '/ble_cscs',
	nrf51sdk_lib + '/uart',
	nrf51sdk_lib + '/hci',
	nrf51sdk_lib + '/usbd/class/hid/kbd',
	nrf51sdk_nrf + '/spi_slave',
	nrf51sdk_nrf + '/lpcomp',
	nrf51sdk_lib + '/timer',
	nrf51sdk_nrf + '/power',
	nrf51sdk_lib + '/usbd/config',
	nrf51sdk_toolchain + '',
	nrf51sdk_lib + '/led_softblink',
	nrf51sdk_nrf + '/qdec',
	nrf51sdk_ble_sv + '/ble_cts_c',
	nrf51sdk_nrf + '/spi_master',
	nrf51sdk_ble_sv + '/ble_nus',
	nrf51sdk_ble_sv + '/ble_hids',
	nrf51sdk_nrf + '/pdm',
	nrf51sdk_lib + '/crc32',
	nrf51sdk_lib + '/usbd/class/audio',
	nrf51sdk_ble + '/peer_manager',
	nrf51sdk_nrf + '/swi',
	nrf51sdk_ble_sv + '/ble_tps',
	nrf51sdk_ble_sv + '/ble_dis',
	nrf51sdk_components + '/device',
	nrf51sdk_ble + '/nrf_ble_qwr',
	nrf51sdk_lib + '/button',
	nrf51sdk_lib + '/usbd',
	nrf51sdk_nrf + '/saadc',
	nrf51sdk_ble_sv + '/ble_lbs_c',
	nrf51sdk_ble + '/ble_racp',
	nrf51sdk_lib + '/fds',
	nrf51sdk_lib + '/twi',
	nrf51sdk_nrf + '/clock',
	nrf51sdk_ble_sv + '/ble_rscs',
	nrf51sdk_nrf + '/usbd',
	nrf51sdk_softdevice + '/common/softdevice_handler',
	nrf51sdk_ble_sv + '/ble_hrs',
	nrf51sdk_lib + '/log/src'
)

segger_rtt = files(
	nrf51sdk + '/external/segger_rtt/RTT_Syscalls_GCC.c',
	nrf51sdk + '/external/segger_rtt/SEGGER_RTT.c',
	nrf51sdk + '/external/segger_rtt/SEGGER_RTT_printf.c'
)
segger_rtt_inc = include_directories(
	nrf51sdk + '/external/segger_rtt'
)

nrf51_gcc = files(
	nrf51sdk_toolchain + '/gcc/gcc_startup_nrf51.S',
	nrf51sdk_toolchain + '/system_nrf51.c'
)
nrf51_gcc_inc = include_directories(
	nrf51sdk_toolchain + '/gcc'
)

e = static_library('sdk', bsp, segger_rtt, nrf51_gcc,
	include_directories: [bsp_inc, segger_rtt_inc, nrf51_gcc_inc],
	c_args: ['-DNRF_LOG_ENABLED', '-DNRF_LOG_DEFAULT_LEVEL=4',
		'-DSWI_DISABLE0', '-DBLE_STACK_SUPPORT_REQD',
		'-DSOFTDEVICE_PRESENT','-DS130','-DNRF_SD_BLE_API_VERSION=2'])
