option('ble_advertising', type: 'boolean', value: true, description: 'Advertising module')
option('ble_ancs_c', type: 'boolean', value: false, description: 'Apple Notification Service Client')
option('ble_ans_c', type: 'boolean', value: false, description: 'Alert Notification Service Client')
option('ble_bas_c', type: 'boolean', value: false, description: 'Battery Service Client')
option('ble_bas', type: 'boolean', value: false, description: 'Battery Service')
option('ble_cscs', type: 'boolean', value: false, description: 'Cycling Speed and Cadence Service')
option('ble_cts_c', type: 'boolean', value: false, description: 'Current Time Service Client')
option('ble_db_discovery', type: 'boolean', value: true, description: 'Database discovery module')
option('ble_dis', type: 'boolean', value: false, description: 'Device Information Service')
option('ble_dtm', type: 'boolean', value: false, description: 'Module for testing RF/PHY using DTM commands')
option('ble_gls', type: 'boolean', value: false, description: 'Glucose Service')
option('ble_hids', type: 'boolean', value: false, description: 'Human Interface Device Service')
option('ble_hrs_c', type: 'boolean', value: false, description: 'Heart Rate Service Client')
option('ble_hrs', type: 'boolean', value: false, description: 'Heart Rate Service')
option('ble_hts', type: 'boolean', value: false, description: 'Health Thermometer Service')
option('ble_ias_c', type: 'boolean', value: false, description: 'Immediate Alert Service Client')
option('ble_ias', type: 'boolean', value: false, description: 'Immediate Alert Service')
option('ble_lbs_c', type: 'boolean', value: false, description: 'Nordic LED Button Service Client')
option('ble_lbs', type: 'boolean', value: false, description: 'LED Button Service')
option('ble_lls', type: 'boolean', value: false, description: 'Link Loss Service')
option('ble_nus_c', type: 'boolean', value: false, description: 'Nordic UART Central Service')
option('ble_nus', type: 'boolean', value: false, description: 'Nordic UART Service')
option('ble_racp', type: 'boolean', value: false, description: 'Record Access Control Point library')
option('ble_rscs_c', type: 'boolean', value: false, description: 'Running Speed and Cadence Client')
option('ble_rscs', type: 'boolean', value: false, description: 'Running Speed and Cadence Service')
option('ble_tps', type: 'boolean', value: false, description: 'TX Power Service')
option('nrf_ble_gatt', type: 'boolean', value: false, description: 'Queued writes support module (prepare/execute write)')
option('nrf_ble_qwr', type: 'boolean', value: false, description: 'Queued writes support module (prepare/execute write)')
option('sensorsim', type: 'boolean', value: false, description: 'Sensors simulation module')
